# ogb

./: .gitignore  LICENSE  MANIFEST.in  README.md  setup.py
examples/: README.md
examples/graphproppred/: main_dgl.py  main_pyg.py
examples/graphproppred/code/: README.md  gnn.py  main_pyg.py  utils.py
examples/graphproppred/code2/: conv.py  (+5 more)
examples/lsc/wikikg90m/dgl-ke-ogb-lsc/python/: setup.cfg  setup.py
examples/lsc/wikikg90m/dgl-ke-ogb-lsc/python/dglke/: __init__.py  dist_train.py  eval.py  infer_emb_sim.py  infer_score.py  kvclient.py  kvserver.py  partition.py  train.py  train_mxnet.py  train_pytorch.py  utils.py
examples/lsc/wikikg90m/dgl-ke-ogb-lsc/python/dglke/dataloader/: KGDataset.py  __init__.py  sampler.py
examples/lsc/wikikg90m/dgl-ke-ogb-lsc/python/dglke/models/: __init__.py  base_loss.py  general_models.py  infer.py  ke_model.py
examples/lsc/wikikg90m/dgl-ke-ogb-lsc/python/dglke/models/mxnet/: __init__.py  loss.py  score_fun.py  tensor_models.py
examples/lsc/wikikg90m/dgl-ke-ogb-lsc/python/dglke/models/pytorch/: ke_tensor.py  loss.py  score_fun.py  tensor_models.py
examples/nodeproppred/: main_dgl.py  main_pyg.py
ogb/: version.py
ogb/graphproppred/: README.md  __init__.py  dataset.py  dataset_dgl.py  dataset_pyg.py  evaluate.py  make_master_file.py  master.csv  mol_encoder.py
ogb/io/: README.md  __init__.py  read_graph_dgl.py  read_graph_pyg.py  read_graph_raw.py  save_dataset.py
ogb/linkproppred/: README.md  __init__.py  dataset.py  dataset_dgl.py  dataset_pyg.py  evaluate.py  make_master_file.py  master.csv
ogb/lsc/: __init__.py  mag240m.py  pcqm4m.py  pcqm4m_dgl.py  pcqm4m_pyg.py  pcqm4mv2.py  pcqm4mv2_dgl.py  pcqm4mv2_pyg.py  utils.py  wikikg90m.py  wikikg90mv2.py
ogb/nodeproppred/: README.md  __init__.py  dataset.py  dataset_dgl.py  dataset_pyg.py  evaluate.py  make_master_file.py  master.csv
ogb/utils/: __init__.py  features.py  mol.py  numpy_util.py  pickle_util.py  torch_util.py  url.py
(+163 files in other folders)
