[metadata]
name = dglke
version = file: dglke/VERSION.txt
url = https://github.com/awslabs/dgl-ke
project_urls =
    Source = https://github.com/awslabs/dgl-ke
    Bug Reports = https://github.com/awslabs/dgl-ke/issues
    Documentation = https://aws-dglke.readthedocs.io/en/latest/index.html
author = AWS AI
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Artificial Intelligence
# Already provided as a classifier.
# license = Apache License
license_files =
    LICENSE
description = A distributed system to learn embeddings of large graphs
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    machine-learning
    knowledge-base
    graph-embedding
test_suite = 

[options]
setup_requires =
    setuptools >= 39.2
install_requires =
    numpy
    setuptools
python_requires = >=3.5, <4
packages = find:

[options.extras_require]
docs = Sphinx

[options.entry_points]
console_scripts =
    dglke_train = dglke.train:main
    dglke_eval = dglke.eval:main
    dglke_partition = dglke.partition:main
    dglke_convert = dglke.convert:main
    dglke_server = dglke.kvserver:main
    dglke_client = dglke.kvclient:main
    dglke_dist_train = dglke.dist_train:main
    dglke_emb_sim = dglke.infer_emb_sim:main
    dglke_predict = dglke.infer_score:main

[options.packages.find]
exclude =
    docs
    test

[options.package_data]
dglke=
    VERSION.txt
